// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<button
  className="sc-bcXHqe sc-gswNZR bQFwRY gCUrWJ"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-bcXHqe sc-gswNZR hzLSTn gCUrWJ"
>
  foo
</button>
`;
